force-app/main/default/objects/Day__c/Day__c.object-meta.xml
<CustomObject>
    <label>Day</label>
    <nameField>
        <displayFormat>D{000000000}</displayFormat>
        <label>Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>