force-app/main/default/objects/Day__c/fields/accommodation__c.field-meta.xml
<CustomField>
    <fullName>accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipLabel>Days</relationshipLabel>
    <relationshipName>Days</relationshipName>
    <type>Lookup</type>
</CustomField>