force-app/main/default/objects/Day__c/fields/accommodation_class__c.field-meta.xml
<CustomField>
    <fullName>accommodation_class__c</fullName>
    <label>Accommodation Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>