force-app/main/default/objects/Day__c/fields/accommodation_flag__c.field-meta.xml
<CustomField>
    <fullName>accommodation_flag__c</fullName>
    <inlineHelpText>Designates whether Accommodation is provided to the group as part of the tour package this day/night. If tour is in transit then today would be a &quot;No Accommodation Day&quot;.</inlineHelpText>
    <label>Accommodation Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Itinerary</fullName>
            </value>
            <value>
                <fullName>No Accommodation Day</fullName>
            </value>
            <value>
                <fullName>Pre Stopover</fullName>
            </value>
            <value>
                <fullName>Post Stopover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>