force-app/main/default/objects/Day__c/fields/archetype__c.field-meta.xml
<CustomField>
    <fullName>archetype__c</fullName>
    <label>Archetype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>