force-app/main/default/objects/Day__c/fields/archetype_descriptor__c.field-meta.xml
<CustomField>
    <fullName>archetype_descriptor__c</fullName>
    <formula>sub_option__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archetype Descriptor</label>
    <type>Text</type>
</CustomField>