force-app/main/default/objects/Day__c/fields/Coach_Color__c.field-meta.xml
<CustomField>
    <fullName>Coach_Color__c</fullName>
    <label>Coach Color</label>
    <length>12</length>
    <type>Text</type>
</CustomField>