force-app/main/default/objects/Day__c/fields/deal_d_o_s__c.field-meta.xml
<CustomField>
    <fullName>deal_d_o_s__c</fullName>
    <formula>departures_dates__r.Deal_D_O_S__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal (D/O/S)</label>
    <type>Text</type>
</CustomField>