force-app/main/default/objects/Day__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>departures dates</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Days</relationshipLabel>
    <relationshipName>Days</relationshipName>
    <type>Lookup</type>
</CustomField>