force-app/main/default/objects/Day__c/fields/sub_option__c.field-meta.xml
<CustomField>
    <fullName>sub_option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Option</label>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>Days</relationshipLabel>
    <relationshipName>Days</relationshipName>
    <type>Lookup</type>
</CustomField>