force-app/main/default/objects/Day__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>accommodation__c</columns>
    <columns>accommodation_class__c</columns>
    <columns>accommodation_flag__c</columns>
    <columns>accomodation_name__c</columns>
    <columns>archetype__c</columns>
    <columns>date__c</columns>
    <columns>departures_dates__c</columns>
    <columns>deal_d_o_s__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>